// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleDrawing should render with drawing mode draw and 3 markers showing "Eindig tekenen" 1`] = `
<button
  className="
      toggle-drawing
      toggle-drawing--expanded
    "
  onClick={[Function]}
  title="Eindig meten en intekenen"
  type="button"
>
  <span
    className="toggle-drawing__icon"
  />
  <span
    className="toggle-drawing__label"
  >
    Eindig
  </span>
</button>
`;

exports[`ToggleDrawing should render with drawing mode none and 3 markers showing "Opnieuw tekenen" 1`] = `
<button
  className="
      toggle-drawing
      toggle-drawing--expanded
    "
  onClick={[Function]}
  title="Opnieuw meten en intekenen"
  type="button"
>
  <span
    className="toggle-drawing__icon"
  />
  <span
    className="toggle-drawing__label"
  >
    Opnieuw
  </span>
</button>
`;

exports[`ToggleDrawing should render with drawing mode none and no markers 1`] = `
<button
  className="
      toggle-drawing
      toggle-drawing--collapsed
    "
  onClick={[Function]}
  title="Begin meten en intekenen"
  type="button"
>
  <span
    className="toggle-drawing__icon"
  />
</button>
`;
